--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<distributionManagement>
 		<repository>
 			<id>github</id>
-			<url>https://maven.pkg.github.com/BhargaviChepuri/plugin-test</url>
+			<url>https://maven.pkg.github.com/jganthakoru/final</url>
 		</repository>
 	</distributionManagement>
 
